<resources>
    <string name="app_name">Bingo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bingo_button">BINGO !</string>
    <string name="see_previous_number">Voir les numéros précédents</string>
    <string name="previous_numbers">Previous numbers</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="create_game">Create Game</string>
    <string name="enter_room_code">Enter room code</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="find_lobby">Find Lobby</string>
    <string name="waiting_room">WAITING ROOM</string>
    <string name="room_finder">ROOM FINDER</string>
    <string name="name">Lobby Name</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="quit">Quit</string>
    <string name="start">Start</string>
    <string name="hello">Hello</string>
    <string name="my_name_is">my name is</string>
    <string name="anonyme">Anonyme</string>
    <string name="error_joining">This lobby doesn\'t exist</string>
    <string name="error_empty_lobby_name">Lobby name cannot be empty</string>
    <string name="win_dialog_winner_text">Congratulations, you won!</string>
    <string name="there_is_a_winner">A winner has been declared !</string>
    <string name="participants">Participant(s)</string>
    <string name="exit_game_confirmation">Are you sure you want to exit?</string>
    <string name="invalid_bingo">You selected numbers that haven\'t been drawn yet !</string>
</resources>