<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fel.lobby.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bingo">

        <ImageView
            android:id="@+id/menu_bingo_logo"
            android:layout_width="292sp"
            android:layout_height="104sp"
            android:layout_marginTop="40sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454"
            app:srcCompat="@drawable/bingo_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70sp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/menu_find_lobby_button"
                android:layout_width="180sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/find_lobby"
                android:background="@drawable/white_btn"
                android:textColor="#363636"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menu_create_game_button"
                android:layout_width="180sp"
                android:layout_height="60sp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_game"
                android:textColor="#feffec"
                android:background="@drawable/black_btn"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menu_join_game_button"
                android:layout_width="180sp"
                android:layout_height="60sp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/white_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/join_lobby"
                android:textColor="#363636"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/myNameIsLayout"
            android:layout_width="191dp"
            android:layout_height="138dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/my_name_is"
            android:gravity="center_horizontal"
            android:weightSum="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0.20"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal|bottom"
                android:text="@string/hello"
                android:textStyle="bold"
                android:textScaleX="2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/my_name_is"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:textScaleX="1.5"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="0.45"
                android:ems="10"
                android:fontFamily="cursive"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:nextFocusUp="@id/player_name"
                android:nextFocusLeft="@id/player_name"
                android:text="@string/anonyme"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/lobby_item_current_game_list"
        android:name="com.ift604.bingo.fel.lobby.LobbyItemListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>