<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alt_background_shadow"
    tools:context=".fel.waitlobby.WaitLobbyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/previous_number_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/cooper_black_regular"
                android:text="@string/waiting_room"
                android:textColor="@color/colorBlue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/wait_lobby_room_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:fontFamily="@font/cooper_black_regular"
                android:text="Room Name"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/creme_tall_rectange"
            android:gravity="center_horizontal"
            android:layout_weight="0.70"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/wait_lobby_participant_frame_layout"
                android:name="com.ift604.bingo.WaitLobbyParticipantListFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="0.05"
            android:weightSum="1">

            <Button
                android:id="@+id/wait_lobby_cancel_button"
                android:layout_width="60sp"
                android:layout_height="40sp"
                android:layout_gravity="start|left"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.2"
                android:background="@drawable/btn_white_rounded_contour"
                android:fontFamily="sans-serif-medium"
                android:text="@string/quit"
                android:textColor="#363636"
                android:textSize="16sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/wait_lobby_start_button"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:layout_gravity="right|end"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.3"
                android:background="@drawable/black_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/start"
                android:textColor="#feffec"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>